[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/wellfleet_mono_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/wellfleet_mono_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://rooms/Room.gd" type="Script" id=3]

[node name="GameRoom" type="PanelContainer"]
margin_left = -274.0
margin_top = -143.0
margin_right = -24.0
margin_bottom = -43.0
rect_min_size = Vector2( 250, 100 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 243.0
margin_bottom = 93.0

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_right = 236.0
margin_bottom = 86.0

[node name="RoomName" type="Label" parent="MarginContainer/Rows"]
margin_right = 236.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 1 )
text = "Room Name"
align = 1

[node name="RoomDescription" type="Label" parent="MarginContainer/Rows"]
margin_top = 25.0
margin_right = 236.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "This is the description of the room."
autowrap = true
